Add jSpecify node.hw.sunspec.inverter package.