@@ -1,28 +1,27 @@
 /* ==================================================================
  * InverterMpptExtensionModelEvent.java - 6/09/2019 5:33:58 pm
- * 
+ *
  * Copyright 2019 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
 
 package net.solarnetwork.node.hw.sunspec.inverter;
 
-import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.Set;
 import net.solarnetwork.node.hw.sunspec.ModelData;
@@ -30,7 +29,7 @@ import net.solarnetwork.node.hw.sunspec.ModelEvent;
 
 /**
  * MPPT extension events.
- * 
+ *
  * @author matt
  * @version 1.0
  * @since 1.4
@@ -99,7 +98,7 @@ public enum InverterMpptExtensionModelEvent implements ModelEvent {
 
 	/**
 	 * Get an enumeration for an index value.
-	 * 
+	 *
 	 * @param index
 	 *        the ID to get the enum value for
 	 * @return the enumeration value
@@ -117,14 +116,14 @@ public enum InverterMpptExtensionModelEvent implements ModelEvent {
 
 	/**
 	 * Get a set of events from a bitmask.
-	 * 
+	 *
 	 * @param bitmask
 	 *        the bitmask
 	 * @return the active events
 	 */
 	public static Set<ModelEvent> forBitmask(long bitmask) {
 		if ( bitmask == 0 || (bitmask & ModelData.NAN_BITFIELD32) == ModelData.NAN_BITFIELD32 ) {
-			return Collections.emptySet();
+			return Set.of();
 		}
 		Set<ModelEvent> result = new LinkedHashSet<>(32);
 		for ( InverterMpptExtensionModelEvent e : InverterMpptExtensionModelEvent.values() ) {
